<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="form"
            type="edu.aku.hassannaqvi.tpvics_r2.models.Form" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/app_bg_gray"
        android:orientation="vertical">


        <!-- CUSTOM TOOLBAR -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/CustomToolbarTheme"
            app:popupTheme="@style/CustomPopupTheme"
            app:subtitle="@string/sectionchlistofchildren0623monthsoldmainheading"
            app:subtitleTextAppearance="@style/Toolbar.SubtitleText"
            app:title="@string/sectionchlistofchildren0623monthsoldmainheading"
            app:titleTextAppearance="@style/Toolbar.TitleText" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/GrpName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- hh21  Radio   -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/fldGrpCVhh21"
                    style="@style/cardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bottom"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/quesNum"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="@string/Qhh21" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/hh21" />

                        </LinearLayout>

                        <RadioGroup
                            android:id="@+id/hh21"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/hh21a"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:checked="@{form.hh21.equals(`1`)}"
                                android:onClick="@{()->form.setHh21(`1`)}"
                                android:text="@string/hh21a" />

                            <RadioButton
                                android:id="@+id/hh21b"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:checked="@{form.hh21.equals(`2`)}"
                                android:onClick="@{()->form.setHh21(`2`)}"
                                android:text="@string/hh21b" />

                            <RadioButton
                                android:id="@+id/hh21c"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:checked="@{form.hh21.equals(`3`)}"
                                android:onClick="@{()->form.setHh21(`3`)}"
                                android:text="@string/hh21c" />

                            <RadioButton
                                android:id="@+id/hh21d"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:checked="@{form.hh21.equals(`4`)}"
                                android:onClick="@{()->form.setHh21(`4`)}"
                                android:text="@string/hh21d" />

                            <RadioButton
                                android:id="@+id/hh21e"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:checked="@{form.hh21.equals(`5`)}"
                                android:onClick="@{()->form.setHh21(`5`)}"
                                android:text="@string/hh21e" />

                            <RadioButton
                                android:id="@+id/hh21f"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:checked="@{form.hh21.equals(`6`)}"
                                android:onClick="@{()->form.setHh21(`6`)}"
                                android:text="@string/hh21f" />

                            <RadioButton
                                android:id="@+id/hh21g"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:checked="@{form.hh21.equals(`7`)}"
                                android:onClick="@{()->form.setHh21(`7`)}"
                                android:text="@string/hh21g" />

                            <RadioButton
                                android:id="@+id/hh21x"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:checked="@{form.hh21.equals(`96`)}"
                                android:onClick="@{()->form.setHh21(`96`)}"
                                android:text="@string/hh21x" />

                            <EditText
                                android:id="@+id/hh21xx"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:digits="AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz0123456789,. "
                                android:hint="@string/hh21x"
                                android:tag="hh21x"
                                android:text="@={form.hh21xx}"
                                android:visibility="@{form.hh21.equals(`96`) ? View.VISIBLE : View.GONE}" />
                        </RadioGroup>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!--EndButton LinearLayout-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="24dp"
                    android:orientation="horizontal"
                    android:padding="24dp">

                    <Button
                        android:id="@+id/btn_End"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:onClick="btnEnd"
                        android:text="Cancel"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn_Continue"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/capsule"
                        android:backgroundTint="@color/colorAccent"
                        android:backgroundTintMode="src_atop"
                        android:onClick="btnContinue"
                        android:text="Save"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>
                <!--EndButton LinearLayout-->
            </LinearLayout>
        </ScrollView>


    </LinearLayout>
</layout>